kubernetes/apps/default/davis/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: davis
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: davis
      sectionName: app
  oidc:
    provider:
      issuer: "https://id.ajgon.casa"
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: pocket-id
          namespace: security
          port: 443
    clientIDRef:
      group: ""
      kind: Secret
      name: davis-secret
    clientSecret:
      group: ""
      kind: Secret
      name: davis-secret
    redirectURL: "https://davis.${ROOT_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
